--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.34.0",
+    "react-query": "^3.39.3",
     "react-router-dom": "5.2.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.7",
