--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-REACT_APP_APIURL=https://crm.api.conecteme.com.vc/api/v2
+#REACT_APP_API_V1_URL=https://crm.api.conecteme.com.vc/api/v1
+REACT_APP_API_V2_URL=https://crm.api.conecteme.com.vc/api/v2
